--- a/CLIENT/package.json
+++ b/CLIENT/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.3",
     "mdb-react-ui-kit": "^8.0.0",
     "moment": "^2.30.1",
+    "mui-chips-input": "^2.1.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-file-base64": "^1.0.3",
@@ -22,6 +23,7 @@
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
+    "redux-thunk": "^3.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
